# xc3-difficulty-unlocker

./: Cargo.toml  README.md  build.rs  build.toml
res/: config.toml  difficulty.toml
src/: config.rs  lib.rs
