[package]
name = "xc3-difficulty-unlocker"
version = "0.1.0"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2021"
license = "gpl-3.0"

[package.metadata.skyline]
titleid = "010074F013262000" # Xenoblade Chronicles 3

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5.0" }

[build-dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
